--- a/src/assets/styles/cmps/_main-categories.scss
+++ b/src/assets/styles/cmps/_main-categories.scss
@@ -1,8 +1,11 @@
 .main-categories {
-  h1 {
+  margin-bottom: 10vh;
+  h2 {
     color: $clr6;
     padding-bottom: 24px;
     margin-bottom: 40px;
+    font-size: 32px;
+    line-height: 120%;
   }
   .categories-list {
     flex-wrap: wrap;
